force-app/main/default/objects/Time_Card_Entry__c/fields/Entry_Note__c.field-meta.xml
<CustomField>
    <fullName>Entry_Note__c</fullName>
    <label>Entry Note</label>
    <type>TextArea</type>
</CustomField>