force-app/main/default/objects/Time_Card_Entry__c/fields/Time_Out_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Time_Out_Picklist__c</fullName>
    <label>Time Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12:15AM</fullName>
            </value>
            <value>
                <fullName>12:30AM</fullName>
            </value>
            <value>
                <fullName>12:45AM</fullName>
            </value>
            <value>
                <fullName>01:00AM</fullName>
            </value>
            <value>
                <fullName>01:15AM</fullName>
            </value>
            <value>
                <fullName>01:30AM</fullName>
            </value>
            <value>
                <fullName>01:45AM</fullName>
            </value>
            <value>
                <fullName>02:00AM</fullName>
            </value>
            <value>
                <fullName>02:15AM</fullName>
            </value>
            <value>
                <fullName>02:30AM</fullName>
            </value>
            <value>
                <fullName>02:45AM</fullName>
            </value>
            <value>
                <fullName>03:00AM</fullName>
            </value>
            <value>
                <fullName>03:15AM</fullName>
            </value>
            <value>
                <fullName>03:30AM</fullName>
            </value>
            <value>
                <fullName>03:45AM</fullName>
            </value>
            <value>
                <fullName>04:00AM</fullName>
            </value>
            <value>
                <fullName>04:15AM</fullName>
            </value>
            <value>
                <fullName>04:30AM</fullName>
            </value>
            <value>
                <fullName>04:45AM</fullName>
            </value>
            <value>
                <fullName>05:00AM</fullName>
            </value>
            <value>
                <fullName>05:15AM</fullName>
            </value>
            <value>
                <fullName>05:30AM</fullName>
            </value>
            <value>
                <fullName>05:45AM</fullName>
            </value>
            <value>
                <fullName>6:00AM</fullName>
            </value>
            <value>
                <fullName>6:15AM</fullName>
            </value>
            <value>
                <fullName>6:30AM</fullName>
            </value>
            <value>
                <fullName>6:45AM</fullName>
            </value>
            <value>
                <fullName>7:00AM</fullName>
            </value>
            <value>
                <fullName>7:15AM</fullName>
            </value>
            <value>
                <fullName>7:30AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>